# banter-workspace

./: Cargo.toml  readme.md
api/: Cargo.toml
api/src/: lib.rs
auth/: Cargo.toml
auth/src/: lib.rs
derives/: Cargo.toml
derives/src/: lib.rs
http_core/: Cargo.toml
http_core/src/: lib.rs
migrations/: 0001_init.up.sql
sql/: Cargo.toml
sql/src/: lib.rs
src/: main.rs
types/: Cargo.toml
types/src/: lib.rs
