[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
auth = { path = "../auth" }
tokio = "1.39.2"
types = { path = "../types" }
http_core = { path = "../http_core" }
sql = { path = "../sql" }
sqlx = { version = "0.8.0", features = ["postgres"] }
serde = "1.0.206"
http-body-util = "0.1.2"
serde_json = "1.0.124"
