[package]
name = "types"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.124"
sqlx = { version = "0.8.0", features = ["chrono", "postgres"] }
derives = { path = "../derives" }
